sudha/src/objects/Full_Calendar_Style__c.object
<CustomObject>
    <description>A rule for styling full calendar events.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is this style rule active?</description>
        <inlineHelpText>Is this style rule active?</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Background_Color__c</fullName>
        <defaultValue>&apos;blue&apos;</defaultValue>
        <description>The background color to apply to any event matching this rule</description>
        <inlineHelpText>The background color to apply to any event matching this rule</inlineHelpText>
        <label>Background Color</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar__c</fullName>
        <description>Which calendar is this style rule related to?</description>
        <inlineHelpText>Which calendar is this style rule related to?</inlineHelpText>
        <label>Calendar</label>
        <referenceTo>Full_Calendar__c</referenceTo>
        <relationshipLabel>Calendar Styles</relationshipLabel>
        <relationshipName>Full_Calendar_Style</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Field_ID__c</fullName>
        <description>The API name of the field on the source object this style rule will evaluate</description>
        <inlineHelpText>The API name of the field on the source object this style rule will evaluate</inlineHelpText>
        <label>Field ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logical__c</fullName>
        <description>What is the rule for this style rule?</description>
        <inlineHelpText>What is the rule for this style rule?</inlineHelpText>
        <label>Logical</label>
        <picklist>
            <picklistValues>
                <fullName>Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does not Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less Than</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <defaultValue>1</defaultValue>
        <description>What priority does this rule have? The highest priority will be applied in the case of multiple applicable style rules.</description>
        <inlineHelpText>What priority does this rule have? The highest priority will be applied in the case of multiple applicable style rules.</inlineHelpText>
        <label>Priority</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>What is the value that this logical condition must evaluate on the field?</description>
        <inlineHelpText>What is the value that this logical condition must evaluate on the field?</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Full Calendar Style</label>
    <nameField>
        <displayFormat>FCS-{00000}</displayFormat>
        <label>Full Calendar Style</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Full Calendar Style</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>